Fri Oct 27 17:04:02 2000  Darrell Brunsch <brunsch@uci.edu>

        * tests/OS_Test.cpp:

          Changed the arrays ([]) to array pointers (*) since the
          pointer arithmatic I do doesn't seem to work with the 
          arrays.

Fri Oct 27 15:45:57 2000  Carlos O'Ryan  <coryan@uci.edu>

        * ace/ace_dll.dsp:
        * ace/ace_lib.dsp:
          Add the new files to the MSVC projects.

Fri Oct 27 15:02:56 2000  Carlos O'Ryan  <coryan@uci.edu>

        * ace/Makefile:
        * ace/Makefile.am:
        * ace/Makefile.bor:
        * ace/Sample_History.h:
        * ace/Sample_History.inl:
        * ace/Sample_History.cpp:
          Add new class to keep a full history of all the samples in a
          performance test.

        * ace/Basic_Stats.h:
        * ace/Basic_Stats.inl:
        * ace/Basic_Stats.cpp:
        * ace/Stats.h:
        * ace/Stats.cpp:
          Refactor code to compute minimum, maximum, average and jitter
          into its own class.  It used to be part of ACE_Througthput_Stats

        * performance-tests/TCP/Makefile:
        * performance-tests/TCP/tcp_test.cpp:
          Use the new ACE_Sample_History class.

Fri Oct 27 12:04:17 2000  Chris Cleeland  <cleeland_c@ociweb.com>

        * platform_chorus.GNU:
        * platform_chorus4.x_g++.GNU:
        * platform_chorus_ghs.GNU:
        * platform_cray.GNU:
        * platform_hpux_kcc.GNU:
        * platform_linux_cxx.GNU:
        * platform_osf1_4.0.GNU:
        * platform_sunos5_ghs.GNU:
        * platform_sunos5_kcc.GNU:
        * platform_sunos5_sunc++.GNU:
        * platform_vxworks5.x_diab.GNU:
        * platform_vxworks5.x_g++.GNU:
        * wrapper_macros.GNU:

          Changed the way that 'rtti', 'exceptions', and 'fast' makeflags
          get processed in wrapper_macros.GNU.  There was a discrepancy
          between the "command line" value and the "platform_macros file"
          value each needed in order to turn the feature off, e.g., zero